Unexpected interaction between clang-format and modularity attributes

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.0.0-rc1
    • Affects Version/s: None
    • Component/s: None
    • None
    • Server Programmability
    • Fully Compatible
    • ALL
    • Programmability 2025-10-27, Programmability 2025-11-24, Programmability 2025-12-08, Programmability 2026-01-05, Programmability 2026-01-19, Programmability 2026-02-02, Programmability 2026-03-02, Programmability 2023-03-30, Programmability 2026-04-28, Programmability 2026-05-26, Programmability 2026-07-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Using clang-format to format the following is not successful:

      class MONGO_MOD_OPEN DBConnectionHook {
      public:
          virtual ~DBConnectionHook() {}
          virtual void onCreate(DBClientBase* conn) {}
          virtual void onHandedOut(DBClientBase* conn) {}
          virtual void onRelease(DBClientBase* conn) {}
          virtual void onDestroy(DBClientBase* conn) {}
      };
      

      The output for applying clang-format to the above is:

      class MONGO_MOD_OPEN DBConnectionHook{
          public : virtual ~DBConnectionHook(){} virtual void onCreate(DBClientBase * conn){} virtual void
              onHandedOut(DBClientBase * conn){} virtual void onRelease(
                  DBClientBase * conn){} virtual void onDestroy(DBClientBase * conn){}
      };
      

      Changing the code to use the default destructor appears to fix this issue:

      virtual ~DBConnectionHook() = default;
      

      Edit-to-add: the fix for this will move the [[]] from inside the macro definition to the use site (eg [[MONGO_MOD_OPEN]]). This will improve compatibility with tools such as clang-format and tree-sitter which try to work with C++ code in its raw form without running the preprocessor.

            Assignee:
            Mathias Stearn
            Reporter:
            Amirsaman Memaripour
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: