Resolve conflicts for merge commit '0b22cf9c3b6' into master

Resolved 5 merge conflicts. The C++ conflicts were all upstream API
migrations (deprecated MONGO_MOD_PUB/MONGO_MOD_OPEN macros converted to
the bracketed [[MONGO_MOD_PUBLIC]]/[[MONGO_MOD_OPEN]] attribute syntax
per SERVER-113811/SERVER-98435, and AtomicWord<bool> -> Atomic<bool> per
SERVER-86602); I migrated to upstream's API while preserving Percona
additions (RATE_LIMIT_MAX, the LDAP user cache invalidator, and the
percona::EngineExtension base class). The Python conflicts stem from
upstream (SERVER-130648) relocating the mongot setup block earlier in
MongoDFixture.__init__ and providing load_extensions via
_deferred_mongot_extension_kwargs; I integrated Percona's
launch_mongot_community feature (PSMDB-2032) into the relocated block
and dropped the now-redundant explicit load_extensions=[] argument.

Resolved:
	buildscripts/resmokelib/testing/fixtures/_builder.py
	buildscripts/resmokelib/testing/fixtures/standalone.py
	src/mongo/db/auth/authorization_manager_impl.h
	src/mongo/db/server_options.h
	src/mongo/db/storage/kv/kv_engine.h

Note: commit created by mergai