src/mongo/db/server_options.h
@@ -65,17 +65,9 @@
 
 namespace mongo {
 
-<<<<<<< HEAD
-MONGO_MOD_PUB constexpr inline int DEFAULT_UNIX_PERMS = 0700;
-MONGO_MOD_PUB constexpr inline int RATE_LIMIT_MAX = 1000;
-MONGO_MOD_PUB constexpr inline size_t DEFAULT_MAX_CONN = 1000000;
-||||||| 20943c6c272
-MONGO_MOD_PUB constexpr inline int DEFAULT_UNIX_PERMS = 0700;
-MONGO_MOD_PUB constexpr inline size_t DEFAULT_MAX_CONN = 1000000;
-=======
 [[MONGO_MOD_PUBLIC]] constexpr inline int DEFAULT_UNIX_PERMS = 0700;
+[[MONGO_MOD_PUBLIC]] constexpr inline int RATE_LIMIT_MAX = 1000;
 [[MONGO_MOD_PUBLIC]] constexpr inline size_t DEFAULT_MAX_CONN = 1000000;
->>>>>>> 0b22cf9c3b6f019e0618ee721ae26f27e2c7f104
 
 struct [[MONGO_MOD_PUBLIC]] ServerGlobalParams {
     std::string binaryName;  // mongod or mongos
